# RustyTokenManipulation

./: README.md
CreateProcessAsLogonW/: Cargo.toml
CreateProcessAsLogonW/src/: main.rs
